--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 body {
-    
+    font-size: 16px;
+    font-family: 'Roboto', sans-serif;
+}
+
+.info-text p{
+    font-style: italic;
+    font-weight: bold;
 }
