--- a/styles/style.css
+++ b/styles/style.css
@@ -3,9 +3,40 @@
 body {
     font-size: 16px;
     font-family: 'Roboto', sans-serif;
+    color: #0f141e;
+    background: #f1f1f1;
+}
+
+.info-text {
+    padding: 0 50px;
 }
 
 .info-text p{
     font-style: italic;
     font-weight: bold;
+    color: #86898f;
+}
+
+.card {
+    border: 1px solid black;
+    border-radius: 20px;
+    background: #fff;
+    padding: 5px 20px;
+    margin: 25px;
+}
+
+.bg-yellow {
+    background: #fff9dc;
+}
+
+.bg-red {
+    background: #ffe5e5;
+}
+
+.bg-green {
+    background: #e5ff97;
+}
+
+.info {
+    display: flex;
 }
