--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,7 @@ body {
     font-family: 'Roboto', sans-serif;
     color: #0f141e;
     background: #f1f1f1;
+    padding: 20px 10vw;
 }
 
 .info-text {
@@ -39,4 +40,8 @@ body {
 
 .info {
     display: flex;
+}
+
+.info img {
+    border-radius: 180px;
 }
