Оформление кнопок и ссылок

--- a/styles/style.css
+++ b/styles/style.css
@@ -2,10 +2,27 @@
 
 
 body {
-    font-size: 16px;
     font-family: 'Roboto', sans-serif;
-    color: #0f141e;
+    font-size: 16px;
+    font-weight: normal;
     background: #f1f1f1;
+    color: #0f141e;
+}
+
+a {
+    color: #000;
+    text-decoration: none;
+}
+a:hover {
+    text-decoration: underline;
+}
+
+a:active {
+    color: blue;
+}
+
+a:visited {
+    color:gray;
 }
 
 .container {
@@ -54,7 +71,7 @@ body {
 
 .card:hover {
     box-shadow: 0 0 25px rgba(0, 0, 0, 0.1);
-    transition-duration: .6s;
+    transition-duration: .4s;
 }
 
 .bg-yellow {
@@ -67,4 +84,23 @@ body {
 
 .bg-green {
     background: #e5ff97;
+}
+
+.btn {
+    background-color: #111;
+    padding: 15px 20px;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    font-family: inherit;
+    cursor: pointer;
+    transition: all .7s;
+}
+
+.btn:hover {
+    opacity: .8;
+}
+
+.btn:active {
+    box-shadow: inset 4px 4px 3px rgba(255,255,255,0.5);
 }
