--- a/styles/style.css
+++ b/styles/style.css
@@ -104,3 +104,12 @@ a:visited {
 .btn:active {
     box-shadow: inset 4px 4px 3px rgba(255,255,255,0.5);
 }
+
+.list {
+    padding: 0 20px;
+}
+
+.list li {
+    color: #86898f;
+    margin-bottom: 10px;
+}
