--- a/styles/style.css
+++ b/styles/style.css
@@ -39,12 +39,11 @@ a:visited {
 .avatar {
     max-width: 240px;
     border-radius: 28px;
-    box-shadow: 4px 4px 14px rgba(0, 0, 0, 0.25);
+    box-shadow: 4px 4px 14px rgba(0, 0, 0, .25);
 }
 
 .info-text {
-    padding: 0 50px;
-    margin: 0;
+    margin-left: 50px;
 }
 
 .info-text h4 {
@@ -141,4 +140,43 @@ a:visited {
 .table td:nth-child(2),
 .table td:nth-child(3) {
     color: #86898f;
+}
+
+.form h2{
+    text-align: center;
+}
+
+.form-row {
+    margin-bottom: 10px;
+    display: flex;
+}
+
+.form-row .form-group {
+    /* display: inline-block; */
+    margin-right: 20px;
+    width: 50%;
+    /* width: calc(50% - 20px); */
+}
+
+.form-row .form-group:last-child {
+    margin-right: 0;
+}
+
+.form-group label{
+    display: block;
+    font-size: 14px;
+    color: #86898f;
+}
+
+.form-group input,
+.form-group textarea {
+    width: 100%;
+    box-sizing: border-box;
+    border: none;
+    background: transparent;
+    border-bottom: 1px solid #ccc;
+    color: #000;
+    padding: 15px 0 10px;
+    outline: none;
+    font-family: inherit;
 }
