Добавил отступ между инпутами формы

--- a/styles/style.css
+++ b/styles/style.css
@@ -197,6 +197,7 @@ a:visited {
 
     .form-row .form-group {
         margin-right: 0;
+        margin-bottom: 10px;
         width: 100%;
     }
 
