--- a/styles/style.css
+++ b/styles/style.css
@@ -26,7 +26,7 @@ a:visited {
 }
 
 .container {
-    margin: auto;
+    margin: 40px auto;
     max-width: 750px;
     padding-top: 10px;
 }
@@ -179,6 +179,7 @@ a:visited {
     padding: 15px 0 10px;
     outline: none;
     font-family: inherit;
+    margin-bottom: 20px;
 }
 
 @media (max-width: 650px) {
